feat: file permissions

--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.keyFile.enabled }}
+{{- if and (not .Values.keyFile.existingSecret) .Values.keyFile.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
