feat: file permissions

--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -4,5 +4,5 @@ kind: Secret
 metadata:
   name: {{ include "livekit-server.fullname" . }}-keys
 data:
-  {{  .Values.keyFile.fileName }}: {{ toYaml .Values.keyFile.keys | b64enc }}
+  {{  .Values.livekit.key_file }}: {{ toYaml .Values.keyFile.keys | b64enc }}
 {{- end }}
