feat: file permissions

--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "livekit-server.fullname" . }}-keys
+  labels:
+    {{- include "livekit-server.labels" . | nindent 4 }}
 data:
   {{  .Values.livekit.key_file }}: {{ toYaml .Values.keyFile.keys | b64enc }}
 {{- end }}
