feat: file permissions

--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -31,9 +31,9 @@ livekit:
     # username:
     # password:
   # key value pairs (<api_key>: >api_secret>)
-  #keys:
-  #  {}
-  key_file: keys.yaml
+  keys:
+    {}
+  # key_file: keys.yaml
   turn:
     enabled: false
     # Must match domain of your tls cert
@@ -45,7 +45,7 @@ livekit:
   # region: <set for multi-region deploys>
 
 keyFile:
-  enabled: true
+  enabled: false
   existingSecret: ""
   keys:
     {}
