feat: upgrade atlantis

--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -33,6 +33,9 @@ livekit:
   # key value pairs (<api_key>: >api_secret>)
   keys:
     {}
+  # Api keys can be loaded from a file
+  # https://github.com/livekit/livekit/blob/6eaa300949cdfe8fbf6e2ded926c9f8c1a01bc61/pkg/config/config.go#L61
+  # In order to set the api keys when using the key_file parameter configure the keyFile block below 
   # key_file: keys.yaml
   turn:
     enabled: false
@@ -46,6 +49,8 @@ livekit:
 
 keyFile:
   enabled: false
+  # Use a pre existing secret, useful to combine with external secret managers
+  # as GCP External Secrets or Hashicorp Vault
   existingSecret: ""
   keys:
     {}
