--- a/livekit-server/templates/service.yaml
+++ b/livekit-server/templates/service.yaml
@@ -4,13 +4,15 @@ metadata:
   name: {{ include "livekit-server.fullname" . }}
   labels:
     {{- include "livekit-server.labels" . | nindent 4 }}
-  {{- if eq .Values.loadBalancer.type "aws" }}
   annotations:
+  {{- if eq .Values.loadBalancer.type "aws" }}
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
-  {{- else if or (eq .Values.loadBalancer.type "gke") (eq .Values.loadBalancer.type "gke-managed-cert") }}
-  annotations:
+  {{- else if or (eq .Values.loadBalancer.type "gke") (eq .Values.loadBalancer.type "gke-managed-cert") (eq .Values.loadBalancer.type "gke-vpc-native") }}
     cloud.google.com/backend-config: '{"ports": {"{{ .Values.loadBalancer.servicePort }}":"{{ include "livekit-server.fullname" . }}"}}'
+  {{- end }}
+  {{- if eq .Values.loadBalancer.type "gke-vpc-native" }}
+    cloud.google.com/neg: '{"ingress": true}'
   {{- end }}
 spec:
   {{- if or (eq .Values.loadBalancer.type "alb") (eq .Values.loadBalancer.type "gke") (eq .Values.loadBalancer.type "gke-managed-cert") (eq .Values.loadBalancer.type "do") }}
