--- a/server-sample.yaml
+++ b/server-sample.yaml
@@ -49,7 +49,7 @@ livekit:
     serviceType: "LoadBalancer"
 
 loadBalancer:
-  # valid values: disable, alb, aws, gke, gke-managed-cert, do
+  # valid values: disable, alb, aws, gke, gke-managed-cert, gke-native-vpc, do
   # on AWS, we recommend using alb load balancer, which supports TLS termination
   # * in order to use alb, aws-ingress-controller must be installed
   #   https://docs.aws.amazon.com/eks/latest/userguide/alb-ingress.html
