--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.keyFile.existingSecret) .Values.keyFile.enabled }}
+{{- if and (not .Values.storeKeysInSecret.existingSecret) .Values.storeKeysInSecret.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{- include "livekit-server.labels" . | nindent 4 }}
 data:
-  {{  .Values.livekit.key_file }}: {{ toYaml .Values.keyFile.keys | b64enc }}
+  {{  .Values.livekit.key_file }}: {{ toYaml .Values.storeKeysInSecret.keys | b64enc }}
 {{- end }}
