--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -35,7 +35,7 @@ livekit:
     {}
   # Api keys can be loaded from a file
   # https://github.com/livekit/livekit/blob/6eaa300949cdfe8fbf6e2ded926c9f8c1a01bc61/pkg/config/config.go#L61
-  # In order to set the api keys when using the key_file parameter configure the keyFile block below 
+  # In order to set the api keys when using the key_file parameter configure the storeKeysInSecret block below
   # key_file: keys.yaml
   turn:
     enabled: false
@@ -47,11 +47,15 @@ livekit:
   # room: <default settings for new rooms>
   # region: <set for multi-region deploys>
 
-keyFile:
+# Set this option to true if you want to store your API keys in a secret instead of the config file
+storeKeysInSecret:
   enabled: false
   # Use a pre existing secret, useful to combine with external secret managers
   # as GCP External Secrets or Hashicorp Vault
   existingSecret: ""
+  # Define your API keys and secrets as key-value pairs here. These will be stored in the secret.
+  # Example: keys:
+  #           my_api_key: my_api_secret
   keys:
     {}
     # key value pairs (<api_key>: >api_secret>)
