--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -123,3 +123,6 @@ securityContext:
 tolerations: []
 
 affinity: {}
+
+# https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#deploymentstrategy-v1-apps
+deploymentStrategy: {}
