feat: deployment annotations

--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -126,3 +126,5 @@ affinity: {}
 
 # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#deploymentstrategy-v1-apps
 deploymentStrategy: {}
+
+deploymentAnnotations: {}
