--- a/ingress/values.yaml
+++ b/ingress/values.yaml
@@ -9,12 +9,13 @@ image:
   pullPolicy: IfNotPresent
 
 ingress:
-  log_level: info
+  logging:
+    level: info
   health_port: 7888
   prometheus_port: 7889
   http_relay_port: 9090
   rtmp_port: 1935
-  
+
   cpu_cost:
     rtmp_cpu_cost: 2
 
