allow custom spec on backendconfig for gcp

--- a/livekit-server/templates/backendconfig.yaml
+++ b/livekit-server/templates/backendconfig.yaml
@@ -4,8 +4,5 @@ kind: BackendConfig
 metadata:
   name: {{ include "livekit-server.fullname" . }}
 spec:
-  # 10h timeout for websocket
-  timeoutSec: 36000
-  connectionDraining:
-    drainingTimeoutSec: 60
+  {{ .Values.gcp.backendConfig | toPrettyJson }}
 {{ end }}
