--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -128,3 +128,11 @@ affinity: {}
 deploymentStrategy: {}
 
 deploymentAnnotations: {}
+
+# Specifies configuration gke backendconfig
+gcp: 
+  backendConfig: 
+    # 10h timeout for websocket
+    timeoutSec: 36000
+    connectionDraining:
+      drainingTimeoutSec: 60
