Add WHIP support to ingress chart

--- a/ingress/templates/deployment.yaml
+++ b/ingress/templates/deployment.yaml
@@ -24,6 +24,10 @@ spec:
       serviceAccountName: {{ include "ingress.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.podHostNetwork }}
+      dnsPolicy: ClusterFirstWithHostNet
+      hostNetwork: true
+      {{- end }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       containers:
         - name: {{ .Chart.Name }}
