--- a/ingress/values.yaml
+++ b/ingress/values.yaml
@@ -15,9 +15,16 @@ ingress:
   prometheus_port: 7889
   http_relay_port: 9090
   rtmp_port: 1935
+  whip_port: 8080
+  rtc_config:
+    use_external_ip: true
+  redis:
+    {}
 
   cpu_cost:
     rtmp_cpu_cost: 2
+    whip_cpu_cost: 2
+    whip_bypass_transcoding_cpu_cost: 0.1
 
 loadBalancer:
   servicePort: 7888
