--- a/ingress-sample.yaml
+++ b/ingress-sample.yaml
@@ -14,6 +14,8 @@ ingress:
   http_relay_port: 9090
   rtmp_port: 1935
   whip_port: 8080
+  rtc_config:
+    use_external_ip: true
 
   redis:
     address: <redis_host:port>
