Add WHIP support to ingress chart (#78)

--- a/ingress-sample.yaml
+++ b/ingress-sample.yaml
@@ -13,6 +13,9 @@ ingress:
   prometheus_port: 7889
   http_relay_port: 9090
   rtmp_port: 1935
+  whip_port: 8080
+  rtc_config:
+    use_external_ip: true
 
   redis:
     address: <redis_host:port>
@@ -23,6 +26,8 @@ ingress:
 
   cpu_cost:
     rtmp_cpu_cost: 2.0
+    whip_cpu_cost: 2.0
+    whip_bypass_transcoding_cpu_cost: 0.1
   # set the Kubernetes serviceType for the ingress service. By default it sets it to "LoadBalancer"
   # See kubernetes serviceTypes on official documentation: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   serviceType: "LoadBalancer"
