--- a/egress/values.yaml
+++ b/egress/values.yaml
@@ -36,7 +36,10 @@ podAnnotations:
 
 podSecurityContext: {}
 
-securityContext: {}
+securityContext:
+  capabilities:
+    add:
+      - SYS_ADMIN
 
 tolerations: []
 
