--- a/ingress/values.yaml
+++ b/ingress/values.yaml
@@ -18,8 +18,8 @@ ingress:
   whip_port: 8080
   rtc_config:
     use_external_ip: true
-  redis:
-    {}
+    udp_port: 7885
+  redis: {}
 
   cpu_cost:
     rtmp_cpu_cost: 2
