--- a/egress/values.yaml
+++ b/egress/values.yaml
@@ -36,10 +36,7 @@ podAnnotations:
 
 podSecurityContext: {}
 
-securityContext:
-  capabilities:
-    add:
-      - SYS_ADMIN
+securityContext: {}
 
 tolerations: []
 
