[livekit-server]feat: add service monitor

--- a/livekit-server/values.yaml
+++ b/livekit-server/values.yaml
@@ -130,9 +130,20 @@ deploymentStrategy: {}
 deploymentAnnotations: {}
 
 # Specifies configuration gke backendconfig
-gcp: 
-  backendConfig: 
+gcp:
+  backendConfig:
     # 10h timeout for websocket
     timeoutSec: 36000
     connectionDraining:
       drainingTimeoutSec: 60
+
+serviceMonitor:
+  # Specifies whether a service monitor should be created
+  create: false
+  # Annotations to add to the service monitor
+  annotations: {}
+  # The name of the service monitor to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+  # The scrape interval
+  interval: 30s
