--- a/livekit-server/templates/ingress.yaml
+++ b/livekit-server/templates/ingress.yaml
@@ -54,22 +54,10 @@ spec:
               number: {{ $svcPort }}
   {{- end }}
   {{- end }}
-{{- if ne .Values.loadBalancer.type "gke-vpc-native" }}
-{{- with .Values.loadBalancer }}
-  {{- if .tls }}
+  {{- if ne .Values.loadBalancer.type "gke-vpc-native" }}
+  {{- with .Values.loadBalancer.tls }}
   tls:
-    {{- range .tls }}
-    {{- if .hosts }}
-    - hosts:
-        {{- range .hosts }}
-        - {{ . | quote }}
-        {{- end }}
-      {{- if .secretName }}
-      secretName: {{ .secretName | quote }}
-      {{- end }}
-    {{- end }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end }}
-{{- end }}
+  {{- end }}
 {{- end }}
