--- a/livekit-server/templates/servicemonitor.yaml
+++ b/livekit-server/templates/servicemonitor.yaml
@@ -5,6 +5,9 @@ metadata:
   name: {{ include "livekit-server.serviceMonitorName" . }}
   labels:
     {{- include "livekit-server.labels" . | nindent 4 }}
+    {{- with .Values.serviceMonitor.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.serviceMonitor.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
