--- a/livekit-server/templates/deployment.yaml
+++ b/livekit-server/templates/deployment.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: {{ default "Deployment" .Values.deploymentType }}
 metadata:
   name: {{ include "livekit-server.fullname" . }}
   labels:
