--- a/ingress/templates/service.yaml
+++ b/ingress/templates/service.yaml
@@ -6,9 +6,11 @@ metadata:
 spec:
   type: {{ default "LoadBalancer" .Values.ingress.serviceType }}
   ports:
+    {{- if .Values.loadBalancer.servicePort }}
     - port: {{ .Values.loadBalancer.servicePort }}
       protocol: TCP
       name: ws
+    {{- end }}
     - port: {{ .Values.ingress.rtmp_port }}
       protocol: TCP
       name: rtmp
