--- a/livekit-server/templates/secret.yaml
+++ b/livekit-server/templates/secret.yaml
@@ -6,5 +6,5 @@ metadata:
   labels:
     {{- include "livekit-server.labels" . | nindent 4 }}
 data:
-  {{  .Values.livekit.key_file }}: {{ toYaml .Values.storeKeysInSecret.keys | b64enc }}
+  {{  .Values.livekit.keyFile }}: {{ toYaml .Values.storeKeysInSecret.keys | b64enc }}
 {{- end }}
