--- a/livekit-server/templates/deployment.yaml
+++ b/livekit-server/templates/deployment.yaml
@@ -76,9 +76,9 @@ spec:
               hostPort: {{ .Values.livekit.rtc.tcp_port }}
               protocol: TCP
             {{- end }}
-            {{- if .Values.livekit.prometheus_port }}
+            {{- if include "livekit-server.prometheus_port" . }}
             - name: metrics
-              containerPort: {{ .Values.livekit.prometheus_port }}
+              containerPort: {{ include "livekit-server.prometheus_port" . }}
               hostPort: {{ .Values.livekit.prometheus_port }}
               protocol: TCP
             {{- end }}
